<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12"
    android:background="#DDF7F7"
    tools:context=".Activity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="264dp"
            android:layout_height="284dp"
            android:layout_marginStart="-43dp"
            android:layout_marginTop="-53dp"
            android:src="@drawable/circle" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/boogaloo"
        android:layout_centerInParent="true"
        android:layout_alignEnd="@id/logo"
        android:text="mentor"
        android:textColor="#2FA8AF"
        android:textSize="70sp"
        android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/textView1"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@id/textView1"
                android:fontFamily="@font/boogaloo"
                android:text="me"
                android:textColor="#FEC80A"
                android:textSize="70sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="#50C1C8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:padding="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:padding="15dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_rounded"
            android:backgroundTint="#FFFFFF"
            android:padding="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="Enter Email"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:padding="15dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_rounded"
            android:backgroundTint="#FFFFFF"
            android:padding="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="Enter your password"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:id="@+id/password"
            />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Your Password?"
            android:layout_gravity="right"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:layout_marginStart="15dp"
            />

<!--        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="sans-serif-condensed"
            android:padding="15dp"
            android:text="Login"
            android:textColor="#50C0C7"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/cardview_default_radius" />-->

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Login"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="#50C0C7"
            android:textSize="20sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/square_rounded"
            android:backgroundTint="#FFFFFF"
            android:id="@+id/login"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="normal"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"

            />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:layout_gravity="center"
                android:textColor="#157177"
                android:textSize="15sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginTop="40dp"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>